--- a/bandit/password/page.html
+++ b/bandit/password/page.html
@@ -21,9 +21,26 @@ bandit16: cluFn7wTiGryunymYOu4RcffSxQluehd<br/>
 bandit18: kfBf3eYk5BPBRzwjqutbbfE887SVc5Yd<br/>
 bandit19 : IueksS7Ubh8G3DCwVzrTd8rAVOwq3M5x<br/>
 bandit20 : GbKksEFF4yrVs6il55v6gwY5aVje5f0j<br/>
+bandit21 : gE269g2h3mw3pwgrj0Ha9Uoqen1c9DGr<br/>
+bandit22 : Yk7owGAcWjwMVRwrTesJEwB7WVOiILLI<br/>
+bandit23 : jc1udXuA1tiHqjIsL8yaapX5XIAI6i0n<br/>
+bandit24 : UoMYTrfrBFHyQXmg6gzctqAwOmw1IohZ<br/>
+bandit25 : uNG9O58gUE7snukf3bvZ0rxhtnjzSGzG<br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
+natas1 : gtVrDuiDfck831PqWsLEZy5gyDz1clto<br/>
+natas2 : ZluruAthQk7Q2MqmDeTiUij2ZvWy2mBi <br/>
+natas3 : sJIJNW6ucpu6HPZ1ZAchaDtwd7oGrD14<br/>
+natas4 : Z9tkRkWmpt9Qr7XrR5jWRkgOU901swEZ <br/>
+natas5 : iX6IOfmpN7AYOQGPwtn3fXpbaJVJcHfq<br/>
+natas6 : aGoY4q2Dc6MgDq4oL4YtoKtyAg9PeHa1<br/>
+natas7 : 7z3hEENjQtflzgnT29q7wAvMNfZdh0i9<br/>
+natas8 : DBfUBfqQG69KvJvJ1iAbMoIpwSNQ9bWe<br/>
+natas9 : W0mMhUcRRnG8dcghE4qvk3JA9lGt8nDl<br/>
+natas10 : nOpp1igQAkUzaI1GUUjzn1bFVj7xCNzu<br/>
+natas11 : U82q5TCMMQ9xuFoI3dYX61s7OZD9JKoK<br/>
+natas12 : EDXp0pS26wLKHZy1rDBPUZk0RKfLGIR3<br/>
+natas13 : jmLTY0qiPZBbaKc9341cqPQZBJv7MQbY<br/>
+natas14 : Lg96M10TdfaPyVBkJdjymbllQ5L6qdl1<br/>
+natas15 : AwWj0w5cvxrZiONgZ9J5stNVkmxdk39J<br/>
+natas16 : WaIHEacj63wnNIBROHeqi3p9t0m5nhmh<br/>
 </body></html>
